# sustainability

./: .buildinfo  .gitignore  .gitpod.yml  LICENSE  Pipfile  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml
doc/: _config.yml  _toc.yml  active-studies.md  appendices.md  bib.ipynb  bibliography.md  environmental-impact-categories.csv  environmental-impact-categories.md  equipment-lifecycle.ipynb  footprint.md  ideas.md  intro.md  links.md  references.bib  summaries.md  todo.md
doc/How to take environmental footprint into account w 09de38c692f64542a44c00bab615808d/: Notes on edge computing 5e89c7e172144a3f8179e6c73c107dab.md  Notes on manufacturing footprint 2524fcee6efd4a45a6ff231cd0b69f3b.md
doc/How to take environmental footprint into account w 09de38c692f64542a44c00bab615808d/Fictional devices 737af07349b5463f927976a5660abd3e/: Camera 1 1f2c96990d2d4bccaaa8141dcad65246.md  Camera 2 8781ca565c4b4621951854fe6a56e171.md  Disposal 3849b7bb56b5438f8182fcc0c743e83c.md  (+2 more)
doc/computing-footprint/: environmental-impact-categories.csv  environmental-impact-categories.md  overview.md
doc/footprint-notes/: Notes-on-ICT-GHG-emissions.md  Notes-on-edge-computing.md  Notes-on-manufacturing-footprint.md
doc/ideas/: green-machine-learning.md  increase-lifetime-with-software.md
doc/iot-footprint/: fictional-devices.csv  fictional-examples.csv  overview.md  paper.md
doc/summaries/: belkhir2018.ipynb  belkhirAssessingICTGlobal2018.md  pef.ipynb
reviews/: belkhir2018.ipynb
reviews/belkhirAssessingICTGlobal2018/: table10.csv
(+27 files in other folders)
