[metadata]
name=flow
author=Wim Yedema
author_email=wim.yedema@gmail.com
python_requires=>=3.11
version = 1.0
url = https://github.com/WimYedema/sustainability
description = Sustainability Research
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sustainability research
license = Apache Software License 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
packages=find:
include_package_data = True
zip_safe = True
# install_requires =
#     Click>=7.0
#     networkx>=2.8.4
#     dagviz>=0.3.0

[options.package_data]
* = py.typed

# [options.entry_points]
# console_scripts = 
#     flow=flow.cli:main

# [options.extras_require]
# notebook = 
#     matplotlib
#     ipympl
#     numpy

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
ignore = E203, W503
exclude = docs

[tool:pytest]
addopts = --ignore=setup.py

[mypy-click.*]
ignore_missing_imports = True

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = False
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
namespace_packages = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_ignores = True
mypy_path = stubs

[coverage:run]
branch = True
source = flow
command_line = -m pytest

[coverage:report]
show_missing = True

[coverage:html]
directory = cov